# github-pm

./: .gitignore  CLAUDE.md  PROJECT.md  PROJECT.template.md  README.md  config.example.yaml  guide-to-using.md  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
config/collection/: default.yaml  repo_filters.yaml  testing.yaml
config/workflows/: workflow_config.yaml
data/: latest
docs/: AGENTIC_VISION.md  DASHBOARD.md  ENGINEERING_MANAGER_GUIDE.md  MULTI_AGENT_WORKFLOW.md  PORTFOLIO_SYSTEM.md  REPOSITORY_MANAGEMENT.md
docs/devlogs/: 2025-11-18-sod-eod-workflow.md
docs/moc/: README.md  architecture.md  components.md  features.md
reports/metrics/: velocity_2025-11-17_16-18-30.json  velocity_2025-11-17_16-18-30.md
reports/planning/: roadmap_2025-11-17_16-20-14.json  roadmap_2025-11-17_16-20-14.md
scripts/: collect.sh  extract_portfolio.py  run_all_workflows.sh  run_workflow.py  sync_repos.py
src/github_pm/: __init__.py  cli.py  commit_analyzer.py  dashboard_cli.py  data_collector.py  github_client.py  json_exporter.py  organizer.py  report_generator.py  status_analyzer.py
tests/: test_data_collector.py  test_github_client.py  test_json_exporter.py  test_organizer.py  test_report_generator.py
workflows/: README.md
workflows/code_analysis/: README.md  commit_report.py  daily_activity.py  period_comparison.py
workflows/dashboard/: app.py  dashboard_manager.py  server.py
workflows/metrics/: velocity_tracker.py
workflows/planning/: README.md  STATUS_LABELS_GUIDE.md  daily_summary.py  roadmap_generator.py  weekly_planner.py
(+6 files in other folders)
